--- a/Sensotrend/Insulin.xaml
+++ b/Sensotrend/Insulin.xaml
@@ -1,36 +1,39 @@
 ﻿<phone:PhoneApplicationPage
+    x:Class="Sensotrend.Insulin"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls" x:Name="s"
-    x:Class="Sensotrend.Glucose"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    shell:SystemTray.IsVisible="True"
-    >
+    shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
-            <RowDefinition Height="768"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
+        <Grid.Resources>
+            <sys:String x:Key="myData">Insulin</sys:String>
+        </Grid.Resources>
+        
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel Grid.Row="0" Margin="12,17,0,635">
+        <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="{StaticResource appName}" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="Verensokeri" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="insuliini" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
-
+        
         <!--ContentPanel - place additional content here-->
-        <Grid x:Name="ContentPanel" Margin="12,161,12,0">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <ListBoxItem Template="{StaticResource DateAndTime}"/>
-            <ListBoxItem Name="dataInput" Template="{StaticResource DataInput}"/>
+            <ListBoxItem Name="dataInput" Template="{StaticResource DataInput}"/>                
             <ListBoxItem Template="{StaticResource Buttons}"/>
         </Grid>
     </Grid>
