--- a/Sensotrend/MainPage.xaml
+++ b/Sensotrend/MainPage.xaml
@@ -40,7 +40,7 @@
             <Button Content="Insuliini" Grid.Column="1" Click="Button_Click2" Style="{StaticResource ButtonStyle}" />
             <Button Content="Ateria" Grid.Row="1" Click="Button_Click3" Style="{StaticResource ButtonStyle}" />
             <Button Content="Liikunta" Grid.Column="1" Grid.Row="1" Style="{StaticResource ButtonStyle}" />
-            <Button Content="Asetukset" Grid.Row="2" Style="{StaticResource ButtonStyle}" />
+            <Button Content="Login" Grid.Row="2" Style="{StaticResource ButtonStyle}" Click="Button_Click_1" />
             <Button Content="Muistiin-&#13;pano" Grid.Column="1" Grid.Row="2" Style="{StaticResource ButtonStyle}" />
         </Grid>
     </Grid>
