--- a/Sensotrend/Login.xaml
+++ b/Sensotrend/Login.xaml
@@ -30,6 +30,7 @@
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
 
         </Grid>
+        <phone:WebBrowser x:Name="AuthenticationBrowser" HorizontalAlignment="Left" Margin="239,201,0,0" Grid.Row="1" VerticalAlignment="Top"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
